--- a/style/style.css
+++ b/style/style.css
@@ -163,3 +163,31 @@ padding: 48px;flex-direction: row;
 justify-content: flex-start;
 background: rgb(255, 255, 255);
 }
+.font{
+    color: rgb(14, 14, 14);
+font-family: Fira Sans;
+font-size: 40px;
+font-weight: 700;
+line-height: 48px;
+letter-spacing: 0%;
+text-align: center;
+}
+.donate-taka{
+    display: flex;display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 24;
+}
+.box-size{
+    border-radius: 24px;
+display:inline-flex;
+background: rgb(198, 228, 214);
+}
+.bd{
+    color: rgb(10, 10, 10);
+    order: 6;
+align-self: stretch;
+flex-grow: 0;
+margin: 80px 0px;
+}
